improved client side form encryption and server decryption for login, signup, otp, file upload, file delete and file preview

--- a/includes/templates/registration-confirmation.html
+++ b/includes/templates/registration-confirmation.html
@@ -79,10 +79,11 @@
             <p class="caption-text" style="color: green;">Your account has been created successfully.</p>
             <p><strong>Login with your email and password to start sharing </strong></p>
             <div class="content">
-                <h3>Account creation Detials</h3>
+                <h3>Account creation Details</h3>
                 <p><strong>Account created on: </strong>{{creation_date}}</p>
                 <p><strong>First name: </strong>{{first_name}}</p>
                 <p><strong>Last name: </strong>{{last_name}}</p>
+                <p><strong>Registered email: </strong>{{email}}</p>
             </div>
             <p class="caption-text" style="font-size: 15px; font-style: italic;">Thank you for choosing our secure file sharing platform.</p>
             <p style="margin-top: 50px; margin-bottom: -30px; color: #000000; font-size: 14px;">&copy; Share {{year}}</p>
