implementated file downloading and cleaned up client-side form encryption and server decryption

--- a/includes/templates/file-download-template.html
+++ b/includes/templates/file-download-template.html
@@ -65,10 +65,13 @@
             <h1 class="logo-text">Share</h1>
             <h2>File Download Confirmation</h2>
             <p style="color: green;">Your file has been successfully downloaded.</p>
+            <p>Download Type: {{download_type}}</p>
             <div class="content">
                 <h3>Download Details</h3>
                 <p><strong>File Name: </strong>{{file_name}}</p>
                 <p><strong>Original File Name: </strong>{{original_filename}}</p>
+                <p><strong>File size: </strong>{{file_size}} MB</p>
+                <p><strong>Upload Date: </strong>{{upload_date}}</p>
                 <p><strong>Download Date: </strong>{{download_date}}</p>
             </div>
             <p class="caption-text" style="font-size: 15px; font-style: italic;">Thank you for using our secure file sharing platform.</p>
