--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,8 @@ footer .footer-links a:hover{
 .signin-form .container,
 .otp-form .container,
 .upload-form,
-.file-ellipse-popup {
+.file-ellipse-popup,
+.shared-file-container {
     width: 420px;
     margin: 0 auto;
     padding: 40px 10px;
@@ -1059,4 +1060,36 @@ nav button,
 .share-actions button {
     padding: 5px 10px;
     font-size: 12px;
+}
+
+/* S Page */
+.shared-file-container {
+    width: 500px;
+}
+
+.share-file-wrapper {
+    /* background-color: #f6f6f6; */
+    border-radius: 8px;
+    margin: 20px;
+    padding: 20px 0;
+    box-shadow: 0px 0px 9px -6px rgba(0, 0, 0, 0.75);
+}
+
+.file-info h2 {
+    padding-bottom: 10px;
+    word-break: break-word;
+}
+
+.file-info .form-box p {
+    border-right: solid 1px #8f8f8f;
+    padding-right: 13px;
+}
+
+.file-info .form-box p:last-child{
+    border-right: none;
+    padding-right: 0;
+}
+
+.share-file-wrapper form button {
+    margin-bottom: 0;
 }
