--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,13 @@ nav ul li a{
     font-weight: 700;
 }
 
+.red-btn {
+    background: #ff0000;
+    color: #FFFFFF;
+    font-weight: 700;
+}
+
+
 .white-btn {
     background: #ffffff;
     color: #000000;
@@ -958,7 +965,8 @@ nav button,
     padding: 0 20px;
 }
 
-.share-success input {
+.share-success input,
+#copyShareLink input {
     color: blue;
     text-decoration: underline;
     width: 100%;
