--- a/css/style.css
+++ b/css/style.css
@@ -1130,3 +1130,80 @@ nav button,
     color: #006AFF;
 }
 
+
+.policies footer,
+.privacy-policy footer {
+    position: relative;
+}
+
+.terms {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 30px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    box-shadow: 0px 0px 7px -3px rgba(0,0,0,0.25);
+}
+
+.terms h1 {
+    font-size: 26px;
+    margin-bottom: 20px;
+}
+
+.terms h2 {
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+.terms p, 
+.terms ul {
+    margin-bottom: 15px;
+    line-height: 1.6;
+}
+
+.terms ul {
+    padding-left: 20px;
+}
+
+.terms .last-updated {
+    font-style: italic;
+    color: #7C7B7B;
+    margin-top: 40px;
+}
+
+.privacy-policy {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 30px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    box-shadow: 0px 0px 7px -3px rgba(0,0,0,0.25);
+}
+
+.privacy-policy h1 {
+    font-size: 26px;
+    margin-bottom: 20px;
+}
+
+.privacy-policy h2 {
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+.privacy-policy p, 
+.privacy-policy ul {
+    margin-bottom: 15px;
+    line-height: 1.6;
+}
+
+.privacy-policy ul {
+    padding-left: 20px;
+}
+
+.privacy-policy .last-updated {
+    font-style: italic;
+    color: #7C7B7B;
+    margin-top: 40px;
+}
